--- a/templates/index.html
+++ b/templates/index.html
@@ -171,31 +171,17 @@
         </div>
         <div>
           AAAAAA
-<fontdue-buy-button collection-slug="tp-responder"></fontdue-buy-button>            
+<fontdue-buy-button collection-slug="responder"></fontdue-buy-button>            
 
-<fontdue-type-testers collection-slug="tp-responder"></fontdue-type-testers>
+<fontdue-type-testers collection-slug="presti-vf"></fontdue-type-testers>
 
-<fontdue-character-viewer collection-slug="tp-responder"></fontdue-character-viewer>
+<fontdue-character-viewer collection-slug="responder"></fontdue-character-viewer>
           BBBBBB
 
         </div>       
     </div>
 
-    <footer class="footer">
-        <div class="footer-content">
-            <div class="footer-logo">
-                <img src="images/type-try-logo.gif" alt="Logo" width="50%"/>
-            </div>
-            <div class="footer-links">
-                <ul>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="licensing.html">Licensing</a></li>
-                    <li><a href="licensing.html">Usage</a></li>
-                </ul>
-            </div>
-        </div>
-    </footer>
+    {{footer}}
 </body>
 
 </html>
