Working on the site

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,6 +46,7 @@
 <body>
     <fontdue-store-modal></fontdue-store-modal>
     <div class='logo'>
+        <!--<a href='index.html'>{{logo}}</a>-->
         {{logo}}
     </div>
 
