--- a/templates/index.html
+++ b/templates/index.html
@@ -68,14 +68,14 @@
       <div class="fontSample">
           <div class="left">
             <div class="text">
-              <h2>Powerlift</h2>
+              <h2>Powerlift H~tru5</h2>
               <h3>Strength in Every Letter</h3>
               <p>This font is perfect for modern, bold, and impactful designs that demand attention. Ideal for headlines and posters.</p>
               <button class="read-more-btn">Read More</button> <!-- Voeg de knop toe -->
             </div>
           </div>
           <div class="right">
-              <img src="{{getBitcountImage}}" width="100%"/>
+              <img src="images/2022/Powerlift_in_use_06_retrofuturism.jpg" width="100%"/>
           </div>
       </div>
     </div>  
@@ -176,9 +176,20 @@
         </div>
         <div>
           AAAAAA
-<fontdue-buy-button collection-id="Rm9udENvbGxlY3Rpb246MTkyMDQ3OTcwMDEwMzg5OTcyMg=="></fontdue-buy-button>            
+<fontdue-buy-button collection-slug="responder-p-vf"></fontdue-buy-button>            
 
-<fontdue-type-testers collection-id="Rm9udENvbGxlY3Rpb246MTkyMDQ3OTcwMDEwMzg5OTcyMg=="></fontdue-type-testers>
+<fontdue-type-testers collection-id="Rm9udENvbGxlY3Rpb246MTkyMDQ5NDE4MDMzNDQ4MDM0NQ=="></fontdue-type-testers>
+
+<fontdue-type-testers collection-id="Rm9udENvbGxlY3Rpb246MTkyMDQ3OTc4MjM2MjU4OTc3Nw=="></fontdue-type-testers>
+
+<fontdue-type-testers 
+  family-name="Presti VF Regular"
+  font-size="72"
+  line-height="1.2"
+  content="The quick brown fox."
+  features="clig"
+  autofit="true">
+  </fontdue-type-testers>
 
 <fontdue-character-viewer collection-id="Rm9udENvbGxlY3Rpb246MTkyMDQ3OTcwMDEwMzg5OTcyMg=="></fontdue-character-viewer>          BBBBBB
 
