New store under constructions. Testers now seem to work

--- a/templates/index.html
+++ b/templates/index.html
@@ -77,6 +77,10 @@
           <div class="right">
               <img src="images/2022/Powerlift_in_use_06_retrofuturism.jpg" width="100%"/>
           </div>
+          <div>
+            <fontdue-type-testers collection-slug="presti-vf"></fontdue-type-testers>
+            <fontdue-buy-button collection-slug="presti-vf"></fontdue-buy-button>
+            </div>            
       </div>
     </div>  
 
@@ -93,6 +97,10 @@
               <button class="read-more-btn">Read More</button> <!-- Voeg de knop toe -->
             </div>
           </div>
+          <div>
+            <fontdue-type-testers collection-slug="upgrade"></fontdue-type-testers>
+            <fontdue-buy-button collection-slug="upgrade"></fontdue-buy-button>         
+          </div>   
       </div>
     </div>  
 
@@ -109,6 +117,10 @@
           <div class="right">
               <img src="images/2022/Presti_in_use_07_looking_at_art.jpg" width="100%"/>
           </div>
+          <div>
+            <fontdue-type-testers collection-slug="proforma"></fontdue-type-testers>
+            <fontdue-buy-button collection-slug="proforma"></fontdue-buy-button>  
+            </div>          
       </div>
     </div>  
 
@@ -125,6 +137,10 @@
               <button class="read-more-btn">Read More</button> <!-- Voeg de knop toe -->
             </div>
           </div>
+          <div>
+            <fontdue-type-testers collection-slug="upgrade"></fontdue-type-testers>
+            <fontdue-buy-button collection-slug="upgrade"></fontdue-buy-button>          
+            </div>  
       </div>  
     </div>
 
@@ -141,6 +157,10 @@
           <div class="right">
               <img src="images/2022/Upgrade_in_use_06_book_fruit_colours.jpg" width="100%"/>
           </div>
+          <div>
+            <fontdue-type-testers collection-slug="upgrade"></fontdue-type-testers>
+            <fontdue-buy-button collection-slug="upgrade"></fontdue-buy-button> 
+          </div>           
       </div>
     </div>  
 
@@ -157,6 +177,10 @@
               <button class="read-more-btn">Read More</button> <!-- Voeg de knop toe -->
             </div>
           </div>
+          <div>
+            <fontdue-type-testers collection-slug="tp-bitcount-grid"></fontdue-type-testers>
+            <fontdue-buy-button collection-slug="tp-bitcount-grid"></fontdue-buy-button>        
+          </div>    
       </div>
     </div>  
 
@@ -173,28 +197,33 @@
           <div class="right">
               <img src="images/2022/Presti_in_use_07_looking_at_art.jpg" width="100%"/>
           </div>
+          <div>
+            <fontdue-type-testers collection-slug="responder-p-vf"></fontdue-type-testers>
+            <fontdue-buy-button collection-slug="responder-p-vf"></fontdue-buy-button> 
+            </div>           
         </div>
-        <div>
-          AAAAAA
-<fontdue-buy-button collection-slug="responder-p-vf"></fontdue-buy-button>            
-
-<fontdue-type-testers collection-id="Rm9udENvbGxlY3Rpb246MTkyMDQ5NDE4MDMzNDQ4MDM0NQ=="></fontdue-type-testers>
-
-<fontdue-type-testers collection-id="Rm9udENvbGxlY3Rpb246MTkyMDQ3OTc4MjM2MjU4OTc3Nw=="></fontdue-type-testers>
-
-<fontdue-type-testers 
-  family-name="Presti VF Regular"
-  font-size="72"
-  line-height="1.2"
-  content="The quick brown fox."
-  features="clig"
-  autofit="true">
-  </fontdue-type-testers>
-
-<fontdue-character-viewer collection-id="Rm9udENvbGxlY3Rpb246MTkyMDQ3OTcwMDEwMzg5OTcyMg=="></fontdue-character-viewer>          BBBBBB
-
-        </div>       
     </div>
+
+    <div class="box">
+       <div class="fontSample">
+          <div class="right">
+              <img src="images/2022/Upgrade_in_use_07_book_memory_02.jpg" width="100%"/>
+          </div>
+          <div class="left">
+            <div class="text">
+              <h2>PowerLift</h2>
+              <h3>Futuristic and Sleek</h3>
+              <p>A sleek and modern font perfect for tech websites, advertisements, and anything needing a clean, futuristic vibe.</p>
+              <button class="read-more-btn">Read More</button> <!-- Voeg de knop toe -->
+            </div>
+          </div>
+          <div>
+            <fontdue-type-testers collection-slug="powerlift"></fontdue-type-testers>
+            <fontdue-buy-button collection-slug="powerlift"></fontdue-buy-button>
+            </div>           
+      </div>
+    </div>  
+
 
     {{footer}}
 </body>
