Issue 1: add class to logo

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,8 +56,7 @@
     <fontdue-store-modal></fontdue-store-modal>
     <header id="header">
       <div class='logo'>
-          <!--<a href='index.html'>{{logo}}</a>-->
-          {{logo}}
+        <a class="logo" href='index.html'>{{logo}}</a>
         <a href="#menu" style="background-color: #FFFFFF"><span>Menu</span></a>
       </div>
     </header>
