Changed footer Logo

--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
       </div>
     </div>
 
-    {{page.fontPromo('tp-upgrade', imageRight=False, typeTester=True, characterViewer=True)}}
+    {{page.fontPromo('tp-upgrade', imageRight=False, typeTester=True, characterViewer=False)}}
     {{page.fontPromo('tp-powerlift', typeTester=True, style='Tight')}}
     
     {{page.fontPromo('presti-display', imageRight=False, typeTester=True)}}
