--- a/templates/index.html
+++ b/templates/index.html
@@ -57,16 +57,27 @@
     <header id="header">
       <div class='logo'>
         <a class="logo" href='index.html'>{{logo}}</a>
-        <a href="#menu" style="background-color: #FFFFFF"><span>Menu</span></a>
+      <nav>
+              <!--<a href="#menu">{{menuName}}</a>-->
+              <a href="#menu">M E N U</a>
+      </nav>
       </div>
     </header>
 
     <!-- Nav -->
-      <nav id="menu">
+       <nav id="menu" class="visible">
         <ul class="links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="article.html">Generic</a></li>
-          <li><a href="elements.html">Elements</a></li>
+    <li><a href="index.html">Index</a></li>
+    <li><a href="presti.html">Presti</a></li>
+    <li><a href="proforma pro.html">Proforma Pro</a></li>
+    <li><a href="powerlift.html">Powerlift</a></li>
+    <li><a href="mynewtypeface.html">MyNewTYpeface</a></li>
+    <li><a href="responder.html">Responder</a></li>
+    <li><a href="upgrade.html">Upgrade</a></li>
+    <li><a href="upgrade neon.html">Upgrade Neon</a></li>
+    <li><a href="upgrade outline.html">Upgrade Outline</a></li>
+    <li><a href="about typetr.html">About TYPETR</a></li>
+    <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
 
