--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -473,17 +473,16 @@ p {
 
 /* Animaties */
 @keyframes slideShow {
-  {{slideShowKeyFrames}}
   0% { transform: translateX(0); }
-  10% { transform: translateX(-100%); }
+  10% { transform: translateX(0); }
   20% { transform: translateX(-100%); }
-  30% { transform: translateX(-200%); }
+  30% { transform: translateX(-100%); }
   40% { transform: translateX(-200%); }
-  50% { transform: translateX(-300%); }
+  50% { transform: translateX(-200%); }
   60% { transform: translateX(-300%); }
-  70% { transform: translateX(-400%); }
+  70% { transform: translateX(-300%); }
   80% { transform: translateX(-400%); }
-  90% { transform: translateX(-500%); }
+  90% { transform: translateX(-400%); }
   100% { transform: translateX(0); }
 }
 
