--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,11 @@
 
     -->
     <!-- Presti -->
+    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ3OTc4MjM2MjU4OTc3Nw%3D%3D.css" rel="stylesheet">  
+    <!--  
     <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ4MDM2NDg2NzUyOTI5OA%3D%3D.css" rel="stylesheet">
     <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ4MDM2NDg2NzUyOTI5OA%3D%3D.css" rel="stylesheet">
+    -->
     <!-- Responder -->
     <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5NDE3NzE2MzU4NjQ4Mw%3D%3D.css" rel="stylesheet">
     <!-- Presti VF -->
@@ -93,7 +96,7 @@
     {{page.fontPromo('tp-upgrade', imageRight=False, typeTester=True, characterViewer=False)}}
     {{page.fontPromo('tp-powerlift', typeTester=True, style='Tight')}}
     
-    {{page.fontPromo('presti-display', imageRight=False, typeTester=True)}}
+    {{page.fontPromo('presti-vf', imageRight=False, typeTester=True)}}
     {{page.fontPromo('tp-proforma', typeTester=True, style='Medium')}}
     
     {{page.fontPromo('responder-p', imageRight=False, typeTester=True)}}
