--- a/templates/index.html
+++ b/templates/index.html
@@ -73,12 +73,11 @@
     <li><a href="presti.html">Presti</a></li>
     <li><a href="proforma pro.html">Proforma Pro</a></li>
     <li><a href="powerlift.html">Powerlift</a></li>
-    <li><a href="mynewtypeface.html">MyNewTYpeface</a></li>
     <li><a href="responder.html">Responder</a></li>
     <li><a href="upgrade.html">Upgrade</a></li>
-    <li><a href="upgrade neon.html">Upgrade Neon</a></li>
-    <li><a href="upgrade outline.html">Upgrade Outline</a></li>
-    <li><a href="about typetr.html">About TYPETR</a></li>
+    <li><a href="upgrade-neon.html">Upgrade Neon</a></li>
+    <li><a href="upgrade-outline.html">Upgrade Outline</a></li>
+    <li><a href="about-typetr.html">About TYPETR</a></li>
     <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
