Add hyphen to file name

--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
         <ul class="links">
     <li><a href="index.html">Index</a></li>
     <li><a href="presti.html">Presti</a></li>
-    <li><a href="proforma pro.html">Proforma Pro</a></li>
+    <li><a href="proforma-pro.html">Proforma Pro</a></li>
     <li><a href="powerlift.html">Powerlift</a></li>
     <li><a href="responder.html">Responder</a></li>
     <li><a href="upgrade.html">Upgrade</a></li>
