Adding fonts to the menu. Single click to open menu.

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,16 +12,16 @@
     <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ4NDIwOTIwNzE5MjI1Nw%3D%3D.css" rel="stylesheet">
 
     -->
-    <!-- Presti -->
+    <!-- Presti VF -->
     <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ3OTc4MjM2MjU4OTc3Nw%3D%3D.css" rel="stylesheet">  
     <!--  
     <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ4MDM2NDg2NzUyOTI5OA%3D%3D.css" rel="stylesheet">
     <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ4MDM2NDg2NzUyOTI5OA%3D%3D.css" rel="stylesheet">
     -->
-    <!-- Responder -->
-    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5NDE3NzE2MzU4NjQ4Mw%3D%3D.css" rel="stylesheet">
-    <!-- Presti VF -->
-    <!-- Presti Deck -->
+    <!-- Upgrade -->
+    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5NTAxMjU0MzExMzIzNQ%3D%3D.css" rel="stylesheet">
+    <!-- Responder VF -->
+    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5NDE4MDMzNDQ4MDM0NQ%3D%3D.css" rel="stylesheet">
     <!-- Proforma -->
     <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5MzI5Mjk1Mzk3MTYyOQ%3D%3D.css" rel="stylesheet">
     <!-- PowerLift -->
@@ -68,11 +68,12 @@
     <nav id="menu">
       <ul class="links">
         <li><a href="index.html">Index</a></li>
-        <li><a href="presti.html">Presti</a></li>
-        <li><a href="proforma-pro.html">Proforma Pro</a></li>
-        <li><a href="powerlift.html">Powerlift</a></li>
-        <li><a href="responder.html">Responder</a></li>
-        <li><a href="upgrade.html">Upgrade</a></li>
+        <li><a href="presti.html" style="font-family: 'Presti VF Regular';font-size: 5em;line-height: 1.4em;">Presti</a></li>
+        <li><a href="proforma-pro.html" style="font-family: 'Proforma Book';font-size: 3em;line-height: 1.4em;">Proforma Pro</a></li>
+        <li><a href="powerlift.html" style="font-family: 'PowerLift Tight';font-size: 3em;line-height: 1.4em;">Powerlift</a></li>
+        <li><a href="responder.html" style="font-family: 'Responder P VF Regular';font-size: 3em;line-height: 1.4em;">Responder P</a></li>
+        
+        <li><a href="upgrade.html" style="font-family: 'Upgrade Thin';font-size: 5em;line-height: 1.4em;">Upgrade</a></li>
         <li><a href="upgrade-neon.html">Upgrade Neon</a></li>
         <li><a href="upgrade-outline.html">Upgrade Outline</a></li>
         <li><a href="about-typetr.html">About TYPETR</a></li>
@@ -110,10 +111,10 @@ function toggleVisibility(targetId) {
 
     if (targetElement) {
         // Check current visibility and toggle
-        if (targetElement.style.visibility === 'hidden') {
-            targetElement.style.visibility = 'visible';
-        } else {
+        if (targetElement.style.visibility === 'visible') {
             targetElement.style.visibility = 'hidden';
+        } else {
+            targetElement.style.visibility = 'visible';
         }
     } else {
         console.error(`Element with ID "${targetId}" not found.`);
