--- a/templates/index.html
+++ b/templates/index.html
@@ -69,13 +69,11 @@
       <ul class="links">
         <li><a href="index.html">Index</a></li>
         <li><a href="presti.html" style="font-family: 'Presti VF Regular';font-size: 5em;line-height: 1.4em;">Presti</a></li>
-        <li><a href="proforma-pro.html" style="font-family: 'Proforma Book';font-size: 3em;line-height: 1.4em;">Proforma Pro</a></li>
+        <li><a href="proforma.html" style="font-family: 'Proforma Book';font-size: 3em;line-height: 1.4em;">Proforma</a></li>
         <li><a href="powerlift.html" style="font-family: 'PowerLift Tight';font-size: 3em;line-height: 1.4em;">Powerlift</a></li>
         <li><a href="responder.html" style="font-family: 'Responder P VF Regular';font-size: 3em;line-height: 1.4em;">Responder P</a></li>
         
         <li><a href="upgrade.html" style="font-family: 'Upgrade Thin';font-size: 5em;line-height: 1.4em;">Upgrade</a></li>
-        <li><a href="upgrade-neon.html">Upgrade Neon</a></li>
-        <li><a href="upgrade-outline.html">Upgrade Outline</a></li>
         <li><a href="about-typetr.html">About TYPETR</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
@@ -97,8 +95,8 @@
     {{page.fontPromo('presti-vf', imageRight=False, typeTester=True)}}
     {{page.fontPromo('tp-proforma', typeTester=True, style='Medium')}}
     
-    {{page.fontPromo('responder-p', imageRight=False, typeTester=True)}}
-    {{page.fontPromo('responder-p', typeTester=True)}}
+    {{page.fontPromo('responder-p-vf', imageRight=False, typeTester=True)}}
+    {{page.fontPromo('responder-p-vf', typeTester=True)}}
 
     {{page.getFooter()}}
 
