--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -218,6 +218,8 @@ body {
   flex-wrap: wrap; /* Laat flex-items wrappen op kleinere schermen */
   margin: 0 auto;
   max-width: 1800px; /* Max breedte voor grote schermen */
+  border-top: solid 1px #202124;
+
 }
 
 /* Stijl voor de linkerkolom */
@@ -377,6 +379,7 @@ p {
 
 #header {
   text-align: left;
+  border-bottom: solid 1px white;
 }
 
 .slide {
@@ -514,6 +517,10 @@ p {
   margin-bottom:0px;
 }
 
+.type-tester:nth-child(1){
+  border-top: solid 1px white; 
+}
+
 .type-tester__toolbar{
   padding-top:10px;
   padding-left:30px;
@@ -532,3 +539,30 @@ p {
   padding-left:30px;
 }
 
+.text .buy-button{
+  display: inline-block;
+  float:right;
+}
+
+.buy-button{
+  display: inline-block;
+  border-radius: 10px;
+  border:white;
+  background-color:white;
+  margin-left:20px;
+  margin:10px;
+}
+
+.buy-button:hover{
+  border-radius: 10px;
+  border:none;
+  background-color: #202124;
+}
+
+.box:nth-child(2n+1) button{
+  color:#202124;
+}
+
+.box:nth-child(2n+1) button:hover{
+  color:white;
+}
