--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -218,8 +218,6 @@ body {
   flex-wrap: wrap; /* Laat flex-items wrappen op kleinere schermen */
   margin: 0 auto;
   max-width: 1800px; /* Max breedte voor grote schermen */
-  border-top: solid 1px #202124;
-
 }
 
 /* Stijl voor de linkerkolom */
@@ -450,6 +448,7 @@ p {
   position: relative;
   bottom: 0;
   width: 100%;
+  border-top: solid 1px white;
 }
 
 .footer-content {
@@ -513,12 +512,20 @@ p {
   color:white;
   width:100%;
   padding-top:1px;
-  padding-bottom:20px;
+  padding-bottom:10px;
   margin-bottom:0px;
+}
+
+.type-tester:last-child {
+  padding-bottom:20px;
 }
 
 .type-tester:nth-child(1){
   border-top: solid 1px white; 
+}
+
+.type-tester:last-child {
+  border-bottom: solid 1px white; 
 }
 
 .type-tester__toolbar{
@@ -537,11 +544,6 @@ p {
 
 .type-tester__features-button__text {
   padding-left:30px;
-}
-
-.text .buy-button{
-  display: inline-block;
-  float:right;
 }
 
 .buy-button{
@@ -565,4 +567,8 @@ p {
 
 .box:nth-child(2n+1) button:hover{
   color:white;
+}
+
+.fontSample .buy-button:last-child{
+  display:none;
 }
