--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
     <header id="header">
       <div class='logo'>
         <a class="logo" href='index.html'>{{logo}}</a>
-        <a id="menuButton" href="#menu" >M E N U</a>
+        <a id="menuButton" href="#menu" ></a>
       </div>
     </header>
 
