--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,13 @@
     <header id="header">
       <div class='logo'>
         <a class="logo" href='index.html'>{{logo}}</a>
-        <a id="menuButton" href="#menu" ></a>
+        <a id="menuButton" href="#menu" >
+          <svg class="hamburger">
+            <rect y="4" width="24" height="2" />
+            <rect y="11" width="24" height="2" />
+            <rect y="18" width="24" height="2" />
+          </svg>
+        </a>
       </div>
     </header>
 
