--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -302,7 +302,7 @@ div.header h1 {
   font-family: "Presti Deck Regular";
   font-style: normal;
   font-weight: 400;
-  font-size: 48px;
+  font-size: 5em;
   color: black;
 }
 
@@ -356,6 +356,7 @@ p {
   width: 100%;
   height: 100vh; /* Volledige schermhoogte */
   overflow: hidden;
+  border-bottom: solid 1px #202124;
 }
 
 /* Slideshow styling */
@@ -383,28 +384,54 @@ p {
   transition: transform 0.5s ease-in-out;
 }
 
+/* Pijlen voor navigatie */
+.slideshow-arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 50px;
+  height: 50px;
+  background-color: #202124;
+  opacity:50%;
+  color: white;
+  font-size: 24px;
+  border: none;
+  cursor: pointer;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 40%;
+}
+
+.slideshow-arrow.left {
+  left: 20px;
+}
+
+.slideshow-arrow.right {
+  right: 20px;
+}
+
+/* Standaard stijlen voor de slides */
+.slideshow-content {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
 #menuButton {
     position: absolute;
     right: 0; /* Zorgt ervoor dat het element aan de rechterkant van de container wordt uitgelijnd */
     top: 10px; /* Correct de pz naar px aangepast */
     padding:10px;
     width: 60px; /* Breedte van de knop */
-    height: 40px; /* Hoogte van de knop */
-    background-size: 32px 32px; /* Grootte van het icoon */
+    height: 60px; /* Hoogte van de knop */
+    background-size: 42px 42px; /* Grootte van het icoon */
     background-color: none;
     cursor: pointer; /* Hand-cursor bij hover */
 }
 
 #menuButton svg{
   fill:white;
-  stroke:white;
-  color:white;
-}
-
-#menuButton svg:hover{
-  fill:red;
-  stroke:red;
-  color:red;
 }
 
 #header nav a {
@@ -468,16 +495,16 @@ p {
 
 .overlay h3 {
   font-family: "Presti Deck Bold";
-  font-size: 6rem;
+  font-size: 3rem;
   margin-top: 10px;
   background: none;
-  width:100%;
   display: inline-block;
   color:black;
   padding:10px;
-  padding-left:5px;
-  padding-right:5px;
+  padding-left:15px;
+  padding-right:15px;
   background-color: white;
+  font-family:"Upgrade Regular", Fallback;
 }
 
 /* Animaties */
@@ -566,6 +593,7 @@ p {
   border-top: solid 1px white; 
   border-bottom: solid 1px white; 
   display: inline-block;
+  width:100%;
 }
 
 .type-tester{
@@ -618,12 +646,20 @@ p {
   margin-left:20px;
   margin:20px;
   font-family:"Upgrade Regular", Fallback;
+  font-size: 14pt;
+  padding-right:20px;
+  padding-left:20px;
+  padding-top:10px;
+  padding-bottom:10px;
+  color:#202124;
 }
 
 .buy-button:hover{
   border-radius: 10px;
   border: solid 1px white; 
   background-color: #202124;
+  font-weight: bold;
+  color:white;
 }
 
 .box:nth-child(2n+1) button{
