--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,30 +54,40 @@ body {
 /* Menu */
 /* Menu */
 
-  #menu {
-    -moz-transform: translateX(20em);
-    -webkit-transform: translateX(20em);
-    -ms-transform: translateX(20em);
-    transform: translateX(20em);
-    -moz-transition: -moz-transform 0.5s ease, box-shadow 0.5s ease, visibility 0.5s;
-    -webkit-transition: -webkit-transform 0.5s ease, box-shadow 0.5s ease, visibility 0.5s;
-    -ms-transition: -ms-transform 0.5s ease, box-shadow 0.5s ease, visibility 0.5s;
-    transition: transform 0.5s ease, box-shadow 0.5s ease, visibility 0.5s;
-    -webkit-overflow-scrolling: touch;
-    background: #f64242;
-    box-shadow: none;
-    color: #ffffff;
-    height: 100%;
-    max-width: 80%;
-    overflow-y: auto;
-    padding: 3em 2em;
-    position: fixed;
-    right: 0;
-    top: 0;
-    width: 40em;
-    opacity: 0;
-    z-index: 10002;
-  }
+#menu {
+  -moz-transform: translateX(20em);
+  -webkit-transform: translateX(20em);
+  -ms-transform: translateX(20em);
+  transform: translateX(20em);
+  -moz-transition: -moz-transform 0.5s ease, box-shadow 0.5s ease;
+  -webkit-transition: -webkit-transform 0.5s ease, box-shadow 0.5s ease;
+  -ms-transition: -ms-transform 0.5s ease, box-shadow 0.5s ease;
+  transition: transform 0.5s ease, box-shadow 0.5s ease;
+  -webkit-overflow-scrolling: touch;
+  background: #f64242;
+  box-shadow: none;
+  color: #ffffff;
+  height: 100%;
+  max-width: 40%;
+  overflow-y: auto;
+  padding: 3em 2em;
+  position: fixed;
+  right: 0;
+  top: 0;
+  visibility: hidden;
+  width: 20em;
+  z-index: 10002;
+}
+
+#menu.visible {
+  -moz-transform: translateX(0);
+  -webkit-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0);
+  box-shadow: 0 0 1.5em 0 rgba(0, 0, 0, 0.2);
+  visibility: visible;
+}
+
 
     #menu > ul {
       margin: 0 0 1em 0;
@@ -120,14 +130,6 @@ body {
 
       }
 
-    #menu.visible {
-      -moz-transform: translateX(0);
-      -webkit-transform: translateX(0);
-      -ms-transform: translateX(0);
-      transform: translateX(0);
-      box-shadow: 0 0 1.5em 0 rgba(0, 0, 0, 0.2);
-      visibility: visible;
-    }
 
 /* Layout stuff */
 .logo {
@@ -419,20 +421,7 @@ p {
   right: 20px;
 }
 
-#menuButton {
-    position: absolute;
-    right: 0; /* Zorgt ervoor dat het element aan de rechterkant van de container wordt uitgelijnd */
-    top: 10px; /* Correct de pz naar px aangepast */
-    padding:10px;
-    width: 60px; /* Breedte van de knop */
-    height: 60px; /* Hoogte van de knop */
-    background-size: 42px 42px; /* Grootte van het icoon */
-    background-color: none;
-    cursor: pointer; /* Hand-cursor bij hover */
-}
-
-#menuButton svg{
-  fill:white;
+#menuButton{
 }
 
 #header nav a {
@@ -581,7 +570,7 @@ p {
   margin-top: 10px; /* Voeg wat ruimte boven de knop toe */
   padding: 10px 20px; /* Voeg wat padding toe om de knop groter te maken */
   font-size: 1rem; /* Stel de tekstgrootte in */
-  color: white; /* Witte tekstkleur */
+   lor: white; /* Witte tekstkleur */
   border: none; /* Verwijder de rand */
   border-radius: 20px; /* Maak de hoeken van de knop afgerond */
   cursor: pointer; /* Verander de cursor naar een pointer bij hover */
