--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -77,6 +77,7 @@ body {
   visibility: hidden;
   width: 20em;
   z-index: 10002;
+  border-left: solid 1px #202124;
 }
 
 #menu.visible {
@@ -100,11 +101,15 @@ body {
 
         #menu > ul.links > li {
           padding: 0;
+          font-family:"Upgrade Regular", Fallback;
+        }
+
+        #menu > ul.links > li:hover {
+          color:#202124;
         }
 
           #menu > ul.links > li > a:not(.button) {
-            border: 0;
-            border-top: solid 1px rgba(255, 255, 255, 0.25);
+            border-top: solid 2px yellow;
             color: inherit;
             display: block;
             line-height: 3.5em;
@@ -125,7 +130,6 @@ body {
 
         #menu .close {
           height: 4em;
-          line-height: 4em;
         }
 
       }
@@ -422,7 +426,26 @@ p {
 }
 
 #menuButton{
+  position: absolute;
+  right: 0px;
+  z-index: 3000000;
+  padding-right: 20px;
 }
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 32;
+  color:white;
+  font-size: 24pt!important;
+}
+
+.material-symbols-outlined:hover {
+  color:yellow;
+}
+
 
 #header nav a {
   -moz-transition: color 0.2s ease-in-out;
@@ -441,11 +464,15 @@ p {
     border-top-width: 0px;
     border-top-style: none;
     border-top-color: currentcolor;
-  border-top: solid 1px rgba(255, 255, 255, 0.25);
+  border-top: solid 0.5px white;
   color: inherit;
   display: block;
   line-height: 3.5em;
   text-decoration: none;
+}
+
+#menu > ul.links > li > a:hover{
+  color:yellow;
 }
 
 #header {
