--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,8 @@
 
     <link rel="stylesheet" href="assets/css/main.css" />
     
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
+
     <script>
      fontdue.initialize({
         url: "https://store.typetr.com",
@@ -60,7 +62,7 @@
     <header id="header">
       <div class='logo'>
         <a class="logo" href='index.html'>{{logo}}</a>
-        <a id="menuButton" href="#menu">M E N U</a>
+        <a id="menuButton" href="#menu"><span class="material-symbols-outlined">menu</span></a>
       </div>
     </header>
 
@@ -71,7 +73,7 @@
         <li><a href="presti.html" style="font-family: 'Presti VF Regular';font-size: 5em;line-height: 1.4em;">Presti</a></li>
         <li><a href="proforma.html" style="font-family: 'Proforma Book';font-size: 3em;line-height: 1.4em;">Proforma</a></li>
         <li><a href="powerlift.html" style="font-family: 'PowerLift Tight';font-size: 3em;line-height: 1.4em;">Powerlift</a></li>
-        <li><a href="responder.html" style="font-family: 'Responder P VF Regular';font-size: 3em;line-height: 1.4em;">Responder P</a></li>
+        <li><a href="responder.html" style="font-family: 'Responder P VF Regular';font-size: 3em;line-height: 1.8em;">Responder P</a></li>
         
         <li><a href="upgrade.html" style="font-family: 'Upgrade Thin';font-size: 5em;line-height: 1.4em;">Upgrade</a></li>
         <li><a href="about-typetr.html">About TYPETR</a></li>
