--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -41,33 +41,53 @@ body {
     -webkit-text-size-adjust: none;
 }
 
+::-moz-selection { /* Code for Firefox */
+  color: #202124;
+  background-color: yellow;
+}
+
+::selection {
+  color: #202124;
+  background-color: yellow;
+}
+
 /* Menu */
 /* Menu */
 
-  #menu {
-    -moz-transform: translateX(20em);
-    -webkit-transform: translateX(20em);
-    -ms-transform: translateX(20em);
-    transform: translateX(20em);
-    -moz-transition: -moz-transform 0.5s ease, box-shadow 0.5s ease, visibility 0.5s;
-    -webkit-transition: -webkit-transform 0.5s ease, box-shadow 0.5s ease, visibility 0.5s;
-    -ms-transition: -ms-transform 0.5s ease, box-shadow 0.5s ease, visibility 0.5s;
-    transition: transform 0.5s ease, box-shadow 0.5s ease, visibility 0.5s;
-    -webkit-overflow-scrolling: touch;
-    background: #f64242;
-    box-shadow: none;
-    color: #ffffff;
-    height: 100%;
-    max-width: 80%;
-    overflow-y: auto;
-    padding: 3em 2em;
-    position: fixed;
-    right: 0;
-    top: 0;
-    visibility: hidden;
-    width: 40em;
-    z-index: 10002;
-  }
+#menu {
+  -moz-transform: translateX(20em);
+  -webkit-transform: translateX(20em);
+  -ms-transform: translateX(20em);
+  transform: translateX(20em);
+  -moz-transition: -moz-transform 0.5s ease, box-shadow 0.5s ease;
+  -webkit-transition: -webkit-transform 0.5s ease, box-shadow 0.5s ease;
+  -ms-transition: -ms-transform 0.5s ease, box-shadow 0.5s ease;
+  transition: transform 0.5s ease, box-shadow 0.5s ease;
+  -webkit-overflow-scrolling: touch;
+  background: #f64242;
+  box-shadow: none;
+  color: #ffffff;
+  height: 100%;
+  max-width: 40%;
+  overflow-y: auto;
+  padding: 3em 2em;
+  position: fixed;
+  right: 0;
+  top: 0;
+  visibility: hidden;
+  width: 20em;
+  z-index: 10002;
+  border-left: solid 1px #202124;
+}
+
+#menu.visible {
+  -moz-transform: translateX(0);
+  -webkit-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0);
+  box-shadow: 0 0 1.5em 0 rgba(0, 0, 0, 0.2);
+  visibility: visible;
+}
 
 
     #menu > ul {
@@ -81,11 +101,15 @@ body {
 
         #menu > ul.links > li {
           padding: 0;
+          font-family:"Upgrade Regular", Fallback;
+        }
+
+        #menu > ul.links > li:hover {
+          color:#202124;
         }
 
           #menu > ul.links > li > a:not(.button) {
-            border: 0;
-            border-top: solid 1px rgba(255, 255, 255, 0.25);
+            border-top: solid 2px yellow;
             color: inherit;
             display: block;
             line-height: 3.5em;
@@ -106,21 +130,9 @@ body {
 
         #menu .close {
           height: 4em;
-          line-height: 4em;
         }
 
       }
-
-    #menu.visible {
-      -moz-transform: translateX(0);
-      -webkit-transform: translateX(0);
-      -ms-transform: translateX(0);
-      transform: translateX(0);
-      box-shadow: 0 0 1.5em 0 rgba(0, 0, 0, 0.2);
-      visibility: visible;
-    }
-
-
 
 
 /* Layout stuff */
@@ -131,11 +143,12 @@ body {
     justify-content: flex-start; /* Plaatst de afbeelding aan de linkerkant */
     align-items: center; /* Centreert de afbeelding verticaal */
     padding-left: 0; /* Optioneel, voegt wat ruimte toe aan de linkerkant */
-    border-bottom: 1px solid white; /* Witte lijn aan de onderkant */
+    border:none;
 }
 .logo img {
     height: 100%; /* Zorgt ervoor dat de afbeelding de volledige hoogte van de .logo div vult */
     width: auto; /* Handhaaft de proporties van de afbeelding */
+    margin-left: 10px;
 }
 
 .box{
@@ -211,6 +224,14 @@ body {
     color: Khaki; /* Blauw voor even .box */
 }
 
+.box h2:hover{
+  color: #202124;
+}
+
+.box h3{
+  padding-top:0px;
+  margin-top:0px;
+}
 
 .type-tester__slider__handle:hover {
   color: green;
@@ -221,6 +242,10 @@ body {
   flex-wrap: wrap; /* Laat flex-items wrappen op kleinere schermen */
   margin: 0 auto;
   max-width: 1800px; /* Max breedte voor grote schermen */
+}
+
+.haeder{
+    border-bottom: solid 1px #202124; 
 }
 
 /* Stijl voor de linkerkolom */
@@ -281,10 +306,17 @@ div.text {
 /* Typography */
 div.header h1 {
   font-family: "Presti Deck Regular";
-  font-style: normal;
+  font-style: bold;
   font-weight: 400;
-  font-size: 48px;
-  color: black;
+  font-size: 5em;
+  color: #202124;
+  padding:10px;
+  padding-left:0px;
+  padding-right:0px;
+  background-color: white;
+  opacity: 80%;
+  margin-bottom: 10px;
+  border-radius: 10px;
 }
 
 /* Styling voor de tekst in de box */
@@ -306,13 +338,16 @@ div.header h1 {
   display:inline-block;
 }
 
+h2:hover{
+  color:red;
+}
 h3 {
   font-family: "Presti Deck Bold";
   /*font-family: "Responder P Book";*/
   font-feature-settings: "kern" 1, "clig" 1;
   font-style: normal;
   font-weight: 400;
-  font-size: 4rem; /* Grotere lettergrootte */
+  font-size: 3.3rem; /* Grotere lettergrootte */
   font-weight: normal;
   color: black; /* Donkere tekstkleur */
   margin: 10px; /* Verwijder marges */
@@ -321,9 +356,11 @@ h3 {
 
 p {
   font-size: 1.3rem; /* Standaard tekstgrootte */
+  font-family:"Upgrade Regular", Fallback;
   color: black; /* Neutrale kleur */
   line-height: 1.6; /* Betere leesbaarheid */
   margin: 10px; /* Verwijder marges */
+  margin-left:20px;
   display:inline-block;
 }
 
@@ -332,6 +369,7 @@ p {
   width: 100%;
   height: 100vh; /* Volledige schermhoogte */
   overflow: hidden;
+  border-bottom: solid 1px #202124;
 }
 
 /* Slideshow styling */
@@ -353,6 +391,61 @@ p {
   animation: slideShow 25s infinite;
 }
 
+/* Standaard stijlen voor de slides */
+.slideshow-content {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+/* Pijlen voor navigatie */
+.slideshow-arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 50px;
+  height: 50px;
+  background-color: #202124;
+  opacity:50%;
+  color: white;
+  font-size: 24px;
+  border: none;
+  cursor: pointer;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 40%;
+}
+
+.slideshow-arrow.left {
+  left: 20px;
+}
+
+.slideshow-arrow.right {
+  right: 20px;
+}
+
+#menuButton{
+  position: absolute;
+  right: 0px;
+  z-index: 3000000;
+  padding-right: 20px;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 32;
+  color:white;
+  font-size: 24pt!important;
+}
+
+.material-symbols-outlined:hover {
+  color:yellow;
+}
+
 
 #header nav a {
   -moz-transition: color 0.2s ease-in-out;
@@ -371,15 +464,20 @@ p {
     border-top-width: 0px;
     border-top-style: none;
     border-top-color: currentcolor;
-  border-top: solid 1px rgba(255, 255, 255, 0.25);
+  border-top: solid 0.5px white;
   color: inherit;
   display: block;
   line-height: 3.5em;
   text-decoration: none;
 }
 
+#menu > ul.links > li > a:hover{
+  color:yellow;
+}
+
 #header {
   text-align: left;
+  border-bottom: solid 1px white;
 }
 
 .slide {
@@ -413,17 +511,17 @@ p {
 }
 
 .overlay h3 {
-  font-family: "Presti Deck Bold";
-  font-size: 6rem;
-  margin-top: 10px;
-  background: none;
-  width:100%;
+  font-size: 3rem;
+  margin-top: 5px;
   display: inline-block;
-  color:black;
+  color:#202124;
   padding:10px;
-  padding-left:5px;
-  padding-right:5px;
+  padding-left:15px;
+  padding-right:15px;
   background-color: white;
+  opacity:70%;
+  font-family:"Upgrade Regular", Fallback;
+  border-radius: 10px;
 }
 
 /* Animaties */
@@ -450,13 +548,14 @@ p {
   position: relative;
   bottom: 0;
   width: 100%;
+  border-top: solid 1px white;
 }
 
 .footer-content {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1200px; /* Optioneel: stel een maximale breedte in voor de footer */
+  max-width: 1800px; /* Optioneel: stel een maximale breedte in voor de footer */
   margin: 0 auto;
   padding: 0 20px;
 }
@@ -465,7 +564,12 @@ p {
   height: 60px; /* Pas de hoogte van het logo aan */
 }
 
+.footer-links{
+  margin-right: 20px;
+}
+
 .footer-links ul {
+  font-family:"Upgrade Regular", Fallback;
   display: flex;
   list-style: none;
   padding: 0;
@@ -473,7 +577,7 @@ p {
 }
 
 .footer-links ul li {
-  margin-left: 20px;
+  margin-left: 30px;
 }
 
 .footer-links ul li a {
@@ -484,6 +588,7 @@ p {
 
 .footer-links ul li a:hover {
   text-decoration: underline; /* Voeg onderlijning toe bij hover */
+  color: red;
 }
 
 
@@ -492,7 +597,7 @@ p {
   margin-top: 10px; /* Voeg wat ruimte boven de knop toe */
   padding: 10px 20px; /* Voeg wat padding toe om de knop groter te maken */
   font-size: 1rem; /* Stel de tekstgrootte in */
-  color: white; /* Witte tekstkleur */
+   lor: white; /* Witte tekstkleur */
   border: none; /* Verwijder de rand */
   border-radius: 20px; /* Maak de hoeken van de knop afgerond */
   cursor: pointer; /* Verander de cursor naar een pointer bij hover */
@@ -504,4 +609,87 @@ p {
 
 .read-more-btn:hover {
   background-color: #0056b3; /* Maak de achtergrondkleur donkerder bij hover */
+}
+
+.fontdueBox{
+  background-color:#202124;
+  border-top: solid 1px white; 
+  border-bottom: solid 1px white; 
+  display: inline-block;
+  width:100%;
+}
+
+.type-tester{
+  display: inline-block;
+  border:none;
+  background-color:#202124;
+  color:white;
+  width:100%;
+  padding-top:1px;
+  padding-bottom:10px;
+  margin-bottom:0px;
+}
+
+.type-tester:last-child {
+  padding-bottom:20px;
+}
+
+.type-tester__toolbar{
+  padding-top:10px;
+  padding-left:30px;
+}
+
+.type-tester__text {
+  padding-left:30px;  
+}
+
+.type-tester__features-button {
+  padding-right: 30px;
+  color:white;
+}
+
+.type-tester__features-button__text {
+  padding-left:30px;
+  color:white;
+}
+
+.type-tester__toolbar {
+  font-family:"Upgrade Regular", Fallback;
+}
+
+.type-tester__features-button button{
+  color:white;
+}
+
+.buy-button{
+  display: inline-block;
+  border-radius: 10px;
+  border: solid 1px white; 
+  background-color:white;
+  margin-top: 0px;
+  margin-left:20px;
+  margin:20px;
+  font-family:"Upgrade Regular", Fallback;
+  font-size: 14pt;
+  padding-right:20px;
+  padding-left:20px;
+  padding-top:10px;
+  padding-bottom:10px;
+  color:#202124;
+}
+
+.buy-button:hover{
+  border-radius: 10px;
+  border: solid 1px white; 
+  background-color: #202124;
+  font-weight: bold;
+  color:white;
+}
+
+.box:nth-child(2n+1) button{
+  color:#202124;
+}
+
+.box:nth-child(2n+1) button:hover{
+  color:white;
 }
