--- a/templates/family.html
+++ b/templates/family.html
@@ -81,11 +81,11 @@
       </ul>
     </nav>
     
-    {{page.fontPromo(page.slug, imageRight=False, typeTester=True)}}
-    {{page.fontPromo(page.slug, typeTester=True, style='Medium')}}
+    {{page.familyInfo(page.slug, imageRight=False, typeTester=True)}}
+    {{page.familyInfo(page.slug, typeTester=True, style='Medium')}}
     
-    {{page.fontPromo(page.slug, imageRight=False, typeTester=True)}}
-    {{page.fontPromo(page.slug, typeTester=True)}}
+    {{page.familyInfo(page.slug, imageRight=False, typeTester=True)}}
+    {{page.familyInfo(page.slug, typeTester=True)}}
 
     {{page.getFooter()}}
 
